--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,15 @@
 [submodule "freedesktop"]
 	path = freedesktop
-	url = https://github.com/lcpz/awesome-freedesktop
+	url = git@github.com:lcpz/awesome-freedesktop
 [submodule "lain"]
 	path = lain
-	url = https://github.com/lcpz/lain.git
+	url = git@github.com:lcpz/lain
 [submodule "shifty"]
 	path = shifty
-	url = https://github.com/bioe007/awesome-shifty.git
+	url = git@github.com:bioe007/awesome-shifty
 [submodule "revelation"]
 	path = revelation
-	url = https://github.com/guotsuan/awesome-revelation
+	url = git@github.com:guotsuan/awesome-revelation
+[submodule "cyclefocus"]
+	path = cyclefocus
+	url = git@github.com:blueyed/awesome-cyclefocus
