massive overhaul abstracting most of rc.lua into individual lua files

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "revelation"]
 	path = revelation
 	url = git@github.com:guotsuan/awesome-revelation
+[submodule "cyclefocus"]
+	path = cyclefocus
+	url = https://github.com/blueyed/awesome-cyclefocus.git
